Sprint#2 Leejineun -> dev (#15)
* 필요없는 최상위 node_modules, yarn.lock 삭제 (#7)

* ignore update (#8)

* 필요없는 최상위 node_modules, yarn.lock 삭제

* yarn.lock 삭제, ignore 추가

* Dev -> Master (#11)

* 필요없는 최상위 node_modules, yarn.lock 삭제

* yarn.lock 삭제, ignore 추가

* Mail API 추가 - GoMotiv (#10)

* 필요없는 최상위 node_modules, yarn.lock 삭제 (#7)

* ignore update (#8)

* 필요없는 최상위 node_modules, yarn.lock 삭제

* yarn.lock 삭제, ignore 추가

* appBar css 수정 및 모바일 앱바 popover 추가

* express react 서버 포트 수정

* react express 포트 수정2

* app bar 아이콘 수정

* mail 인증 API 추가 / 강동기

* Dev -> Master / web socket 서버 통합 (#13)

* 필요없는 최상위 node_modules, yarn.lock 삭제

* yarn.lock 삭제, ignore 추가

* Mail API 추가 - GoMotiv (#10)

* 필요없는 최상위 node_modules, yarn.lock 삭제 (#7)

* ignore update (#8)

* 필요없는 최상위 node_modules, yarn.lock 삭제

* yarn.lock 삭제, ignore 추가

* appBar css 수정 및 모바일 앱바 popover 추가

* express react 서버 포트 수정

* react express 포트 수정2

* app bar 아이콘 수정

* mail 인증 API 추가 / 강동기

* dev <- leejineun/webSocket merge (#12)

* 필요없는 최상위 node_modules, yarn.lock 삭제 (#7)

* ignore update (#8)

* 필요없는 최상위 node_modules, yarn.lock 삭제

* yarn.lock 삭제, ignore 추가

* appBar css 수정 및 모바일 앱바 popover 추가

* express react 서버 포트 수정

* react express 포트 수정2

* app bar 아이콘 수정

* mail 인증 API 추가 / 강동기

* readme 수정

* webSocket 배너 서버 머지

* port  3002 로 수정

* e-4까지완료_20190513_이진은

* packagejson포트수정_20190514_이진은

--- a/node_websocket/views/server.ejs
+++ b/node_websocket/views/server.ejs
@@ -7,7 +7,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src='/public/server.js'></script>
         <script src='/public/bannerUpload.js'></script>
-        <script src='/public/serverImgShow.js'></script>
+        <script src='/public/showDetail.js'></script>
         
         <input type='file' id="baseFile"/>
         <form action="">
@@ -16,15 +16,16 @@
         <select id="idReceiver"></select>
         <button id="idSelectImgButton">전송하기</button>
         <p>
-            <input id="textServer" type="text"/>
-            <button id="textButton"> 텍스트 전송 </button>
+            <strong>현재 광고 대기열</strong>
         </p>
-        <strong>현재 광고 대기열</strong>
-        
         <div id="dbImg">
             <% for (let item in imgSource ){%>      
-                <p><input id="chkImg1" type="checkbox" name= <%= imgSource[item].name %> value= <%= imgSource[item].path %>></P>
-                <p><img src= <%= imgSource[item].path %> title= <%= imgSource[item].name %> /></p>
+                
+                <p><input id="chkImg1" type="checkbox" name= <%= imgSource[item].name %> value= <%= imgSource[item].path %>></p>
+                <!-- <a href=#<%= imgSource[item].name %>> -->
+                    <img id= <%= imgSource[item].name %> src= <%= imgSource[item].path %> title= <%= imgSource[item].name %> />
+                <!-- </a> -->
+                
                 <%= imgSource[item].name %>
             <% }; %>
         </div>
