--- a/node_websocket/views/duplicate.ejs
+++ b/node_websocket/views/duplicate.ejs
@@ -5,10 +5,13 @@
     </title>
   </head>
   <body>
-    <p>중복 접속입니다.</p>
-    <p>현재 접속된 배너창이 있습니다. OBS나 XSPLIT 프로그램에서 배너창이 띄워져있지 않은지 확인해주세요. (또는 브라우저)</p>
-    <p>다른 사람이 사용 중인것 같으시면 접속IP를 확인해주세요.</p>
-    <p>만약 띄워져 있는 배너창이 없는데, 이 경고창이 뜬다면 고객센터로 문의해주시면 해결해드리겠습니다. </p>
+    중복 접속입니다.
+    <br>
+    현재 접속된 배너창이 있습니다. OBS나 XSPLIT 프로그램에서 배너창이 띄워져있지 않은지 확인해주세요. (또는 브라우저)
+    <br>
+    배너창을 종료 후, 다시 실행시키면 문제가 해결될 수 있습니다. 
+    <br>
+    해결되지 않는다면 고객센터로 문의해주시면 해결해드리겠습니다. 
   </body>
 
 </html>
