Add socket.io to continuous integration

--- a/node_websocket/views/home.ejs
+++ b/node_websocket/views/home.ejs
@@ -1,17 +1,20 @@
 <html>
-    <head>
-        <title>home</title>
-    </head>
-    <body>
-        <p>this is home</p>
-        <p>client pages</p>
-        <a href="http://localhost:3002/banner/id1"><b>ID1</b></a>
-        <a href="http://localhost:3002/banner/id2"><b>ID2</b></a>
-        <a href="http://localhost:3002/banner/id3"><b>ID3</b></a>
-        <a href="http://localhost:3002/banner/id4"><b>ID4</b></a>
-        <a href="http://localhost:3002/banner/id5"><b>ID5</b></a>
-        <p>server page</p>
-        <a href="http://localhost:3002/banner/server"><b>SERVER</b></a>
-       
-    </body>
+
+<head>
+    <title>home</title>
+</head>
+
+<body>
+    <p>this is home</p>
+    <p>client pages</p>
+    <a href="<%= hostname %>/banner/id1"><b>ID1</b></a>
+    <a href="<%= hostname %>/banner/id2"><b>ID2</b></a>
+    <a href="<%= hostname %>/banner/id3"><b>ID3</b></a>
+    <a href="<%= hostname %>/banner/id4"><b>ID4</b></a>
+    <a href="<%= hostname %>/banner/id5"><b>ID5</b></a>
+    <p>server page</p>
+    <a href="<%= hostname %>/banner/server"><b>SERVER</b></a>
+
+</body>
+
 </html>
