웹소켓 ejs 자잘한 수정

--- a/node_websocket/views/client.ejs
+++ b/node_websocket/views/client.ejs
@@ -1,12 +1,15 @@
 <html>
-    <head>
-        <title>banner_page</title>
-    </head>
-    <body>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-        <script src='/public/client.js'></script>
 
-        <div id="imgMessage"></div>
-    </body>
+<head>
+    <title>onAd Banner Program 1.0.0</title>
+</head>
+
+<body>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src='/public/client.js'></script>
+
+    <div id="imgMessage"></div>
+</body>
+
 </html>
