--- a/node_websocket/views/wrongUrl.ejs
+++ b/node_websocket/views/wrongUrl.ejs
@@ -1,22 +1,24 @@
 <html>
-  <head>
-    <title>
-      주소 경고창
-    </title>
-    <style>
-        body {
-          font-size : 15px;
-          font-weight: bold;
-        }
-      </style>
-  </head>
-  <body>
-    죄송합니다. 등록되지 않은 URL 주소입니다. 주소를 다시 한 번 확인해주세요.
-    <br>
-    만약 올바르게 입력했는데, 이 경고창이 뜬다면 소스등록을 다시 해주세요. 
-    <br>
-    더 자세한 사항은 고객센터로 문의하여주시면, 신속히 조치해드리겠습니다.
-    <p>고객센터 E-MAIL : support@onad.io</p>
-  </body>
+
+<head>
+  <title>
+    잘못된 주소
+  </title>
+  <style>
+    body {
+      font-size: 15px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+
+<body>
+  죄송합니다. 등록되지 않은 URL 주소입니다. 주소를 다시 한 번 확인해주세요.
+  <br>
+  만약 올바르게 입력했는데, 이 경고창이 뜬다면 소스등록을 다시 해주세요.
+  <br>
+  더 자세한 사항은 고객센터로 문의하여주시면, 신속히 조치해드리겠습니다.
+  <p>고객센터 E-MAIL : support@onad.io</p>
+</body>
 
 </html>
