--- a/client/src/assets/css/onad.css
+++ b/client/src/assets/css/onad.css
@@ -75,6 +75,11 @@ body {
   line-height: 1.5em;
 }
 
+::-webkit-scrollbar {width: 12px; height: 12px; border: 6px solid #fff; }
+::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {display: block; height: 10px;}
+::-webkit-scrollbar-track {background: #efefef; -webkit-border-radius: 10px; border-radius:10px; -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.2)}
+::-webkit-scrollbar-thumb {height: 50px; width: 50px; background: #00acc1; -webkit-border-radius: 8px; border-radius: 8px; -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.1)}
+
 blockquote footer:before,
 blockquote small:before {
   content: "\2014 \00A0";
@@ -241,3 +246,4 @@ footer ul li a:hover {
     overflow-x: hidden;
   }
 }
+
