--- a/node_websocket/views/client.ejs
+++ b/node_websocket/views/client.ejs
@@ -6,7 +6,7 @@
 
 <body>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
     <script src='/public/client.js'></script>
 
     <div id="imgMessage"></div>
