메타 태그 추가

--- a/tracker/views/index.ejs
+++ b/tracker/views/index.ejs
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+  <meta http-equiv='cache-control' content='no-cache'>
+  <meta http-equiv='expires' content='0'>
+  <meta http-equiv='pragma' content='no-cache'>
   <style>
     .loader {
       border: 16px solid #f3f3f3;
