--- a/tracker/views/index.ejs
+++ b/tracker/views/index.ejs
@@ -28,9 +28,9 @@
   </style>
   <title>OnAD - 1인 미디어 광고 플랫폼</title>
   <script>
-    if (!window.location.hash) {
-      window.location = window.location + '#loaded';
-      window.location.reload(true);
+    if (!location.hash) {
+      location.hash = '#reload';
+      location.href = location.href;
     }
   </script>
 </head>
