--- a/tracker/views/index.ejs
+++ b/tracker/views/index.ejs
@@ -28,7 +28,9 @@
   </style>
   <title>OnAD - 1인 미디어 광고 플랫폼</title>
   <script>
-    caches.keys().then(cs => cs.forEach(c => caches.delete(c)))
+    window.onload = function () {
+      if (location.href.indexOf('reloaded') == -1) location.replace(location.href + '?reloaded');
+    }
   </script>
 </head>
 
