--- a/tracker/views/index.ejs
+++ b/tracker/views/index.ejs
@@ -24,6 +24,11 @@
     }
   </style>
   <title>OnAD - 1인 미디어 광고 플랫폼</title>
+  <script>
+    window.onload = function () {
+      if (location.href.indexOf('reloaded') == -1) location.replace(location.href + '?reloaded');
+    }
+  </script>
 </head>
 
 <body>
