로칼스토리지 삭제 / 새로고침 추가

--- a/tracker/views/server.ejs
+++ b/tracker/views/server.ejs
@@ -24,6 +24,15 @@
     }
   </style>
   <title>OnAD - 1인 미디어 광고 플랫폼</title>
+  <script>
+    localStorage.clear();
+    window.onload = function () {
+      if (!window.location.hash) {
+        window.location = window.location + '#loaded';
+        window.location.reload(true);
+      }
+    }
+  </script>
 </head>
 
 <body>
