--- a/tracker/views/server.ejs
+++ b/tracker/views/server.ejs
@@ -40,7 +40,7 @@
     <% if (message === '광고주 페이지로 이동중입니다...') { %>
     <div class="loader"></div>
     <% } else { %>
-    <img src=https://onad-static-files.s3.ap-northeast-2.amazonaws.com/onad_logo_blue.jpg height=160px></img>
+    <img src=onad_logo_vertical_small.png height=160px></img>
     <% } %>
     <h3 style="font-weight: 600;"><%= message %></h3>
     <a href="<%= twitchlink %>"><%= twitchlink %></a>
