베너 클릭시 숨김 완료

--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -11,7 +11,7 @@
     const exports = {};
   </script>
   <script src='/public/bundle.js'></script>
-  <div id="imgMessage"></div>
+  <div class="img-area" id="imgMessage"></div>
   <div id="qrcode"></div>
 </body>
 
