--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -1,10 +1,20 @@
 <html>
 
 <head>
-  <title>onAd Banner Program 1.0.0</title>
+  <title>onAd Banner Program 2.0.0</title>
 </head>
 
 <body>
+  <style>
+    .img-area.hidden img {
+      display: none
+    }
+
+    .img-area {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
   <script>
