--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -83,7 +83,7 @@
   <script src='/public/bundle.js'></script>
   <div class="img-area" id="imgMessage"></div>
   <div class="marquee">
-    <p>해당 배너는 대가를 지급받은 광고입니다.</p>
+    <p>이 배너는 금전적 대가를 지급받은 광고입니다</p>
   </div>
 </body>
 
