--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -25,18 +25,18 @@
       margin-bottom: 10px;
       position: absolute;
       display: block;
-      font-size: 80vh;
+      font-size: 40vh;
       width: 100%;
-      height: 100%;
+      height: 80%;
       background: rbga(0, 0, 0, 5);
-      top: 2%;
-      bottom: 2%;
+      top: 20%;
+      bottom: 20%;
       background-color: rgba(0, 0, 0, .5);
     }
 
     .marquee p {
       color: white;
-      text-shadow: -1px 0 #000000, 0 1px #000000, 1px 0 #000000, 0 -1px #000000;
+      text-shadow: -3px 0 #000000, 0 3px #000000, 3px 0 #000000, 0 -3px #000000;
       margin: 0;
       padding-left: 100%;
       display: inline-block;
@@ -83,7 +83,7 @@
   <script src='/public/bundle.js'></script>
   <div class="img-area" id="imgMessage"></div>
   <div class="marquee">
-    <p>이 배너는 금전적 대가를 지급받은 광고입니다</p>
+    <p>해당 배너는 금전적 지원을 받은 광고입니다.</p>
   </div>
 </body>
 
