--- a/client-ts/src/assets/onad.css
+++ b/client-ts/src/assets/onad.css
@@ -22,6 +22,7 @@ body {
     line-height: 1.5em;
 }
 
+/* |<- 스크롤 바 스타일링  */
 ::-webkit-scrollbar {
     width: 12px;
     height: 12px;
@@ -36,8 +37,6 @@ body {
 
 ::-webkit-scrollbar-track {
     background: #efefef;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
     -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .2)
 }
 
@@ -45,10 +44,9 @@ body {
     height: 50px;
     width: 50px;
     background: #00acc1;
-    -webkit-border-radius: 8px;
-    border-radius: 8px;
     -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .1)
 }
+/* 스크롤 바 스타일링 ->| */
 
 * {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
