--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -25,12 +25,12 @@
       margin-bottom: 10px;
       position: absolute;
       display: block;
-      font-size: 40vh;
+      font-size: 20vh;
       width: 100%;
-      height: 80%;
+      height: 100%;
       background: rbga(0, 0, 0, 5);
-      top: 20%;
-      bottom: 20%;
+      top: 1px;
+      /* bottom: 20%; */
       background-color: rgba(0, 0, 0, .5);
     }
 
