--- a/client-ts/src/assets/onad.css
+++ b/client-ts/src/assets/onad.css
@@ -15,7 +15,7 @@ html * {
 }
 
 body {
-    background-color: #eeeeee;
+    /* background-color: #fff; */
     margin: 0;
     font-family: Helvetica, 'Sunflower', sans-serif;
     font-weight: 300;
