--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -17,7 +17,15 @@
     }
 
     body {
-      margin: 20px;
+      max-width: 100%;
+      max-height: 100%;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      overflow: auto;
+      position: fixed;
+      right: 0;
+      top: 0;
     }
 
     .marquee {
@@ -30,7 +38,6 @@
       height: 100%;
       background: rbga(0, 0, 0, 5);
       top: 1px;
-      /* bottom: 20%; */
       background-color: rgba(0, 0, 0, .5);
     }
 
