--- a/tracker/views/server.ejs
+++ b/tracker/views/server.ejs
@@ -37,15 +37,19 @@
 
 <body>
   <div style="height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-    <% if (message === '광고주 페이지로 이동중입니다...') { %>
-    <div class="loader"></div>
-    <% } else { %>
-    <a href="https://onad.io">
-      <img src=https://onad-static-files.s3.ap-northeast-2.amazonaws.com/onad_logo_blue.jpg height=160px></img>
-    </a>
-    <% } %>
-    <h3 style="font-weight: 600;"><%= message %></h3>
-    <a href="<%= twitchlink %>"><%= twitchlink %></a>
+    <% if (message==='광고주 페이지로 이동중입니다...' ) { %>
+      <div class="loader"></div>
+      <% } else { %>
+        <a href="https://onad.io">
+          <img src=https://onad-static-files.s3.ap-northeast-2.amazonaws.com/onad_logo_blue.jpg height=160px></img>
+        </a>
+        <% } %>
+          <h3 style="font-weight: 600;">
+            <%= message %>
+          </h3>
+          <a href="<%= twitchlink %>">
+            <%= twitchlink %>
+          </a>
   </div>
 </body>
 
