--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -6,6 +6,19 @@
 
 <body>
   <style>
+    body {
+      margin: 20px;
+      max-width: 100%;
+      max-height: 100%;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      overflow: auto;
+      position: fixed;
+      right: 0;
+      top: 0;
+    }
+
     .img-area.hidden img {
       display: none
     }
@@ -14,10 +27,6 @@
       width: 100%;
       height: 100%;
       position: relative
-    }
-
-    body {
-      margin: 20px;
     }
 
     .marquee {
