--- a/client-ts/src/assets/onad.css
+++ b/client-ts/src/assets/onad.css
@@ -28,29 +28,27 @@ body {
 }
 
 /* |<- 스크롤 바 스타일링  */
+/* width and height */
 ::-webkit-scrollbar {
-    width: 12px;
-    height: 12px;
-    border: 6px solid #fff;
-}
-
-::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment {
-    display: block;
+    width: 10px;
     height: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background: #efefef;
-    -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .2)
-}
-
-::-webkit-scrollbar-thumb {
-    height: 50px;
-    width: 50px;
-    background: #00acc1;
-    -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .1)
-}
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #fff; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #ddd; 
+    border: 2px solid transparent;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #c0c0c0
+  }
 /* 스크롤 바 스타일링 ->| */
 
 * {
