모바일 공지사항 UI 수정

--- a/client-ts/src/assets/onad.css
+++ b/client-ts/src/assets/onad.css
@@ -157,3 +157,8 @@ div.MuiDataGrid-root .MuiDataGrid-footer {
 .react-markdown h1,h2,h3,h4,h5,h6 {
     font-weight: bold;
 }
+@media (max-width: 990px) {
+    .react-markdown img {
+        width: 100%;
+    }
+}
