패비콘 변경 및 theme 색상 변경

--- a/client-ts/src/organisms/mypage/marketer/shared/upload.css
+++ b/client-ts/src/organisms/mypage/marketer/shared/upload.css
@@ -12,10 +12,10 @@
     line-height: normal; 
     vertical-align: middle; 
     text-align: center;
-    background-color:#00acc1;
+    background-color:#2771ff;
     cursor: pointer; 
     border: 1px solid #ebebeb; 
-    border-color: #00acc1; 
+    border-color: #2771ff; 
     border-radius: .25em; 
 } 
 .filebox input[type="file"] {
