이미지 추가 / 경로 수정 / package.json 수정

--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -63,7 +63,7 @@
   <script src='/public/bundle.js'></script>
   <div class="banner-box">
     <div class="default">
-      <img id="ad-marker" src="https://onad-static-files.s3.ap-northeast-2.amazonaws.com/%EC%9C%A0%EB%A3%8C%EA%B4%91%EA%B3%A0%ED%8F%AC%ED%95%A83.png">
+      <img id="ad-marker" src="/image/ad-notice.png" alt="유료광고배너">
     </div>
     <div class="img-area" id="imgMessage"></div>
   </div>
