경로수정 / ad블로커가 유료배너 표시 막는 현상 수정

--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -63,7 +63,7 @@
   <script src='/public/bundle.js'></script>
   <div class="banner-box">
     <div class="default">
-      <img id="ad-marker" src="/image/ad-notice.png" alt="유료광고배너">
+      <img id="ad-marker" src="/public/images/notice.png" alt="유료광고배너">
     </div>
     <div class="img-area" id="imgMessage"></div>
   </div>
