하단 영역 비울 때 랭킹도 비우도록 변경

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -15,15 +15,15 @@
     <div class="left-section">
       <div class="outer-text-area">
         <div class="inner-text-area-wrapper">
-          <p class="inner-text-area" id="0">
+          <p class="inner-text-area" id="rank-0">
             <span class="inner-text-area-id">
             </span>
           </p>
-          <p class="inner-text-area" id="1">
+          <p class="inner-text-area" id="rank-1">
             <span class="inner-text-area-id">
             </span>
           </p>
-          <p class="inner-text-area" id="2">
+          <p class="inner-text-area" id="rank-2">
             <span class="inner-text-area-id">
             </span>
           </p>
