가상광고 삽입 / 뉴띵 전용 도네 이미지로 변경 / css 퍼센트로 수정 / css 일부 수정

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -13,28 +13,29 @@
 
   <body>
     <div class="left-section">
-      <div class="outer-text-area">
-        <div class="inner-text-area-wrapper">
-          <p class="inner-text-area" id="rank-0">
-            <span class="inner-text-area-id">
+      <!--랭킹-->
+      <div class="ranking-area">
+        <div class="ranking-area-inner">
+          <p class="ranking-text-area" id="rank-0">
+            <span class="ranking-text-area-id">
             </span>
           </p>
-          <p class="inner-text-area" id="rank-1">
-            <span class="inner-text-area-id">
+          <p class="ranking-text-area" id="rank-1">
+            <span class="ranking-text-area-id">
             </span>
           </p>
-          <p class="inner-text-area" id="rank-2">
-            <span class="inner-text-area-id">
+          <p class="ranking-text-area" id="rank-2">
+            <span class="ranking-text-area-id">
             </span>
           </p>
         </div>
       </div>
-      <div class="left-banner-area"> 
-      </div>
+      <!--세로 배너-->
+      <div class="left-banner-area"></div>
     </div>
     <!--우측상단 응원메세지-->
-    <div class="top-right">
-      
+    <div class="top-right"></div>
+    <div class="virtual-ad">
     </div>
     <!--하단 영역-->
     <div class="bottom-area-wrapper">
