라이브 커머스 수정중

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -31,10 +31,13 @@
         </div>
       </div>
       <!--세로 배너-->
-      <div class="left-banner-area"></div>
+      <div class="left-banner-area">
+        <img src="/public/images/vertical-banner.gif" class="left-live-commerce" width="100%" height="100%">
+      </div>
     </div>
     <!--우측상단 응원메세지-->
     <div class="top-right"></div>
+    <!-- 가상광고 영역 -->
     <div class="virtual-ad">
     </div>
     <!--하단 영역-->
