이미지 누락

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -36,8 +36,9 @@
       </div>
     </div>
     <!--우측상단 응원메세지-->
-    <div class="top-right"></div>
-    <!-- 가상광고 영역 -->
+    <div class="top-right">
+    </div>
+    <!--가상광고 영역-->
     <div class="virtual-ad">
     </div>
     <!--하단 영역-->
