레이아웃 변경 완료

--- a/live-commerce/views/test-client.ejs
+++ b/live-commerce/views/test-client.ejs
@@ -23,7 +23,9 @@
             <p class="ranking-text-area" id="rank-0">
               <img src="/public/images/crown.png" id="ranking-icon"/>
               <span class="ranking-text-area-id">
+                자르반 24시
               </span>
+              님 24개 구매
             </p>
             <p class="ranking-text-area" id="rank-1">
               <img src="/public/images/second.png" id="ranking-icon"/>
@@ -44,14 +46,52 @@
       </div>
       <!--우측상단 응원메세지-->
       <div class="top-right">
+        <div class="donation-wrapper">
+          <iframe src="/public/audio/alarm-type-2.mp3" id="iframeAudio" allow="autoplay" style="display:none"></iframe>
+          <div class="item">
+            <div class="centered">
+            <img src="/public/images/donation-2.gif" class="donation-image"/>
+              <div class ="animated heartbeat" id="donation-top">
+                <span id="nickname">
+                  <span class="animated heartbeat" id="donation-user-id">자르반 24시</span>
+                  <span class="donation-sub">님 한우곰탕</span>
+                  <span class="animated heartbeat" id="donation-num">24</span>
+                  <span class="donation-sub">개 구매!</span>
+                </span>
+              </div>
+              <div class="animated tada delay-1s" id="donation-message">
+                <span id="message">
+                  가다라마바사아자차A가다라마바사아자차A가다라마바사아자차A가다라마바사아자차A가다라마바사아자차A
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!--가상광고 영역-->
       <div class="virtual-ad">
+        <img 
+          src="/public/images/virtual-ad.gif"
+        />
       </div>
       <!--하단 영역-->
       <div class="bottom-area-wrapper">
+        <div class="bottom-left">
+          <div class="bottom-object">
+            <p>
+              100/300
+            </p>
+          </div>
+          <div class="bottom-timer">
+            <!-- <span id="time-hour"></span> -->
+            <span id="time-min"></span>
+            <span> : </span>
+            <span id="time-sec"></span>
+          </div>
+        </div>
         <div class="bottom-area">
           <p class="bottom-area-text">
+            가다라마바사아자차A가다라마바사아자차A가다라마바사아자차A가다라마바사아자차A가다라마바사아자차A
           </p>
         </div>
       </div>
