--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -4,27 +4,25 @@
 }
 
 body {
-  max-width: 100%;
-  max-height: 100%;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  overflow: auto;
-  position: fixed;
-  right: 0;
-  top: 0;
-}
-
-.live-commerce-area {
   width: 100%;
   height: 100%;
-  position: relative;
-  display: block;
+  margin: 0px;
+  overflow: auto;
+  position: fixed;
+  display:flex;
+  justify-content: flex-end;
+
+}
+
+.live-commerce {
+  width:97%;
+  height:95%;
+  position:relative
 }
 
 /* 하단영역 */
 .bottom-area-wrapper {
-  width: 79%;
+  width: 100%;
   height: 6%;
   position: absolute;
   display: flex;
@@ -35,8 +33,50 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.bottom-left{
+  width:22.5%;
+  height: 100%;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly ;
+  align-items: center;
+}
+
+.bottom-object {
+  width:50%;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottom-object p{
+  font-family: 'KOTRA';
+  font-size: 23px;
+  color: #ffffff;
+  -webkit-text-stroke: 1px #000000;
+}
+
+.bottom-timer {
+  width:50%;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-family: 'KOTRA';
+  font-size: 23px;
+  color: #ffffff;
+  -webkit-text-stroke: 1px #000000;
+}
+
+.bottom-timer span {
+  width:10%;
+  display:flex;
+  justify-content: space-around;
+}
+
 .bottom-area {
-  width: 100%;
+  width: 77.5%;
   height: 100%;
   overflow: hidden;
   display: flex;
@@ -142,42 +182,53 @@ body {
 /* 좌측 영역 */
 .left-section {
   float: left;
-  width: 21%;
-  height: 100%;
+  width: 22.5%;
+  height: 94%;
   position: relative;
 }
 
 /* 좌측 상단 랭킹 */
 .ranking-area {
   display: flex;
+  top:6.5%;
   width: 100%;
-  height: 17%;
+  height: 31%;
   position: absolute;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
 
 .ranking-area-inner {
+  width:100%;
+  height:100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 }
 
 .ranking-text-area {
+  width:100%;
+  height:25%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0.1%;
+  margin: 1%;
   font-family: 'KOTRA';
   font-size: 25px;
   color: #ffffff;
   -webkit-text-stroke: 1px black;
 }
 
+.ranking-text-area#title {
+  font-size:30px;
+  color:#F5F171;
+}
+
 .ranking-text-area-id {
+  margin-left:2%;
   font-size: 25px;
   color: #27b9ac;
   -webkit-text-stroke: 1px black;
@@ -191,7 +242,7 @@ body {
 /* 좌측 배너영역 */
 .left-banner-area {
   width: 100%;
-  height: 83%;
+  height: 62.5%;
   left: 0%;
   bottom: 0%;
   position: absolute;
@@ -199,12 +250,17 @@ body {
 
 /* 우측 상단 응원메세지 영역 */
 .top-right {
-  display: none;
-  width: 600px;
-  height: 400px;
-  top: 50px;
-  right: 50px;
+  display: flex;
+  width: 34.4%;
+  height: 44.5%;
+  top: 9.5%;
+  right: 3%;
   position: fixed;
+}
+
+.donation-wrapper{
+  width:100%;
+  height:100%
 }
 
 .centered {
@@ -245,12 +301,26 @@ body {
   color: rgb(255, 255, 255);
 }
 
-#donation-image {
-  width: 600;
-  height: 400px;
+.donation-image {
+  width: 100%;
+  height: 100%;
   margin-bottom: 10px;
 }
 
 #donation-top {
   margin: 6px;
+}
+
+/* 가상광고 */
+.virtual-ad {
+  position:fixed;
+  bottom:10.7%;
+  right:0px;
+  width:40.6%;
+  height:39%;
+}
+
+.virtual-ad img{
+  width:100%;
+  height:100%;
 }
