--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -50,6 +50,19 @@
       </div>
       <!--하단 영역-->
       <div class="bottom-area-wrapper">
+        <div class="bottom-left">
+          <div class="bottom-object">
+            <p>
+              100/300
+            </p>
+          </div>
+          <div class="bottom-timer">
+            <!-- <span id="time-hour"></span> -->
+            <span id="time-min"></span>
+            <span> : </span>
+            <span id="time-sec"></span>
+          </div>
+        </div>
         <div class="bottom-area">
           <p class="bottom-area-text">
           </p>
