--- a/live-commerce/views/test-client.ejs
+++ b/live-commerce/views/test-client.ejs
@@ -30,12 +30,16 @@
             <p class="ranking-text-area" id="rank-1">
               <img src="/public/images/second.png" id="ranking-icon"/>
               <span class="ranking-text-area-id">
+                가렌
               </span>
+                님 5개 구매
             </p>
             <p class="ranking-text-area" id="rank-2">
               <img src="/public/images/third.png" id="ranking-icon"/>
               <span class="ranking-text-area-id">
+                임세아
               </span>
+                님 2개 구매
             </p>
           </div>
         </div>
@@ -78,11 +82,13 @@
       <div class="bottom-area-wrapper">
         <div class="bottom-left">
           <div class="bottom-object">
-            <p>
+            <img src="/public/images/object.png" class="bottom-left-icon"/>
+            <span>
               100/300
-            </p>
+            </span>
           </div>
           <div class="bottom-timer">
+            <img src="/public/images/timer.png" class="bottom-left-icon" />
             <!-- <span id="time-hour"></span> -->
             <span id="time-min"></span>
             <span> : </span>
