시계 흔들기 / 오버플로우

--- a/live-commerce/views/test-client.ejs
+++ b/live-commerce/views/test-client.ejs
@@ -22,25 +22,38 @@
             TOP 구매자
           </p>
           <p class="ranking-text-area" id="rank-0">
-            <img src="/public/images/crown.png" id="ranking-icon" />
-            <span class="ranking-text-area-id">
-              자르반 24시
+            <span class="ranking-id-wrapper">
+              <img src="/public/images/crown.png" id="ranking-icon" />
+              <span class="ranking-text-area-id">
+                한둘셋넷다여일여아
+              </span>
             </span>
-            님 24개
+            <span>
+              24개
+            </span>
+
           </p>
           <p class="ranking-text-area" id="rank-1">
-            <img src="/public/images/second.png" id="ranking-icon" />
-            <span class="ranking-text-area-id">
-              가렌
+            <span class="ranking-id-wrapper">
+              <img src="/public/images/second.png" id="ranking-icon" />
+              <span class="ranking-text-area-id">
+                가렌
+              </span>
             </span>
-            님 5개
+            <span>
+              5개
+            </span>
           </p>
           <p class="ranking-text-area" id="rank-2">
-            <img src="/public/images/third.png" id="ranking-icon" />
-            <span class="ranking-text-area-id">
-              임세아
+            <span class="ranking-id-wrapper">
+              <img src="/public/images/third.png" id="ranking-icon" />
+              <span class="ranking-text-area-id">
+                임세아
+              </span>
             </span>
-            님 2개
+            <span>
+              2개
+            </span>
           </p>
         </div>
       </div>
@@ -87,7 +100,7 @@
           </span>
         </div>
         <div class="bottom-timer">
-          <img src="/public/images/clock.png" class="bottom-left-icon" />
+          <img src="/public/images/clock.png" class="bottom-left-icon" id="clock"/>
           <!-- <span id="time-hour"></span> -->
           <span id="time-min"></span>
           <span> : </span>
