--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -9,8 +9,13 @@
 }
 
 @font-face {
-  font-family: 'COOKIE';
+  font-family: 'JALNAN';
   src: url('/public/fonts/JalnanOTF.otf');
+}
+
+@font-face {
+  font-family: 'BLACK-GOTHIC';
+  src: url('/public/fonts/BlackHanSans-Regular.ttf');
 }
 
 body {
@@ -56,6 +61,28 @@ body {
   margin-right: 5%;
 }
 
+.bottom-left-icon.urgent#clock{
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 .bottom-object {
   width: 50%;
   display: flex;
@@ -65,7 +92,7 @@ body {
 }
 
 .bottom-object span {
-  font-family: 'COOKIE';
+  font-family: 'JALNAN';
   font-size: 30px;
   color: #ffffff;
   -webkit-text-stroke: 1px #000000;
@@ -239,26 +266,38 @@ body {
   justify-content: flex-start;
   padding-left:10%;
   margin: 1%;
-  font-family: 'COOKIE';
+  font-family: 'JALNAN';
   font-size: 25px;
   color: #ffffff;
   -webkit-text-stroke: 1px black;
 }
 
 .ranking-text-area#title {
+  font-family: 'BLACK-GOTHIC';
   height: 15%;
   justify-content: center;
   padding-left:0;
+  margin-top:3%;
   margin-bottom: 0;
-  font-size: 30px;
+  font-size: 35px;
   color: #fcfaad;
 }
 
+.ranking-id-wrapper {
+  display:flex;
+  align-items: center;
+  width:70%;
+  font-size:30px;
+}
+
 .ranking-text-area-id {
+  display:block;
   margin-left: 2%;
   font-size: 30px;
   color: #27b9ac;
   -webkit-text-stroke: 1px black;
+  overflow: hidden;
+  white-space: nowrap; 
 }
 
 #ranking-icon {
