랭킹합산 구현

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -22,18 +22,31 @@
             TOP 구매자
           </p>
           <p class="ranking-text-area" id="rank-0">
-            <img src="/public/images/crown.png" id="ranking-icon" />
-            <span class="ranking-text-area-id">
+            <span class="ranking-id-wrapper">
+              <img src="/public/images/crown.png" id="ranking-icon" />
+              <span class="ranking-text-area-id" id="rank-0">
+              </span>
+            </span>
+            <span class="quantity" id="rank-0">
             </span>
           </p>
+
           <p class="ranking-text-area" id="rank-1">
-            <img src="/public/images/second.png" id="ranking-icon" />
-            <span class="ranking-text-area-id">
+            <span class="ranking-id-wrapper">
+              <img src="/public/images/second.png" id="ranking-icon" />
+              <span class="ranking-text-area-id" id="rank-1">
+              </span>
+            </span>
+            <span class="quantity" id="rank-1">
             </span>
           </p>
           <p class="ranking-text-area" id="rank-2">
-            <img src="/public/images/third.png" id="ranking-icon" />
-            <span class="ranking-text-area-id">
+            <span class="ranking-id-wrapper">
+              <img src="/public/images/third.png" id="ranking-icon" />
+              <span class="ranking-text-area-id" id="rank-2">
+              </span>
+            </span>
+            <span class="quantity" id="rank-2">
             </span>
           </p>
         </div>
@@ -53,11 +66,13 @@
     <div class="bottom-area-wrapper">
       <div class="bottom-left">
         <div class="bottom-object">
-          <p>
+          <img src="/public/images/object.png" class="bottom-left-icon" />
+          <span>
             100/300
-          </p>
+          </span>
         </div>
         <div class="bottom-timer">
+          <img src="/public/images/clock.png" class="bottom-left-icon" id="clock"/>
           <!-- <span id="time-hour"></span> -->
           <span id="time-min"></span>
           <span> : </span>
