목표수량 색상 변경 / 목표시간 디데이방식으로 변경 / 새로고침 후 데이터 불러오는 기능 구현

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -67,8 +67,14 @@
       <div class="bottom-left">
         <div class="bottom-object">
           <img src="/public/images/object.png" class="bottom-left-icon" />
+          <span id="current-quantity">
+            0
+          </span>
           <span>
-            100/300
+            /
+          </span>
+          <span id="quantity-object">
+            1000
           </span>
         </div>
         <div class="bottom-timer">
