--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -91,11 +91,19 @@ body {
   align-items: center;
 }
 
-.bottom-object span {
+.bottom-object span{
   font-family: 'JALNAN';
   font-size: 30px;
-  color: #ffffff;
+  color: rgb(85, 83, 83);
   -webkit-text-stroke: 1px #000000;
+}
+
+#current-quantity {
+  color: white
+}
+
+#quantity-object {
+  color: yellow
 }
 
 .bottom-timer {
@@ -269,7 +277,7 @@ body {
   font-family: 'JALNAN';
   font-size: 25px;
   color: #ffffff;
-  -webkit-text-stroke: 1px black;
+  -webkit-text-stroke: 2px black;
 }
 
 .ranking-text-area#title {
@@ -279,7 +287,7 @@ body {
   padding-left:0;
   margin-top:3%;
   margin-bottom: 0;
-  font-size: 35px;
+  font-size: 45px;
   color: #fcfaad;
 }
 
@@ -291,11 +299,12 @@ body {
 }
 
 .ranking-text-area-id {
+  width:70%;
   display:block;
   margin-left: 2%;
   font-size: 30px;
   color: #27b9ac;
-  -webkit-text-stroke: 1px black;
+  -webkit-text-stroke: 1.5px black;
   overflow: hidden;
   white-space: nowrap; 
 }
