--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -61,7 +61,7 @@ body {
   margin-right: 5%;
 }
 
-.bottom-left-icon.urgent#clock{
+.bottom-left-icon.urgent#clock {
   /* Start the shake animation and make the animation last for 0.5 seconds */
   animation: shake 0.5s;
 
@@ -70,17 +70,39 @@ body {
 }
 
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
 
 .bottom-object {
@@ -91,7 +113,7 @@ body {
   align-items: center;
 }
 
-.bottom-object span{
+.bottom-object span {
   font-family: 'JALNAN';
   font-size: 30px;
   color: rgb(85, 83, 83);
@@ -99,16 +121,16 @@ body {
 }
 
 #current-quantity {
-  color: white
+  color: white;
 }
 
 #quantity-object {
-  color: yellow
+  color: yellow;
 }
 
 .bottom-timer {
   width: 50%;
-  margin-right:8%;
+  margin-right: 8%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -119,11 +141,11 @@ body {
 }
 
 .bottom-timer.warning {
-  color:yellow
+  color: yellow;
 }
 
 .bottom-timer.urgent {
-  color:red
+  color: red;
 }
 
 .bottom-timer span {
@@ -272,7 +294,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding-left:10%;
+  padding-left: 10%;
   margin: 1%;
   font-family: 'JALNAN';
   font-size: 25px;
@@ -284,29 +306,29 @@ body {
   font-family: 'BLACK-GOTHIC';
   height: 15%;
   justify-content: center;
-  padding-left:0;
-  margin-top:3%;
+  padding-left: 0;
+  margin-top: 3%;
   margin-bottom: 0;
   font-size: 45px;
-  color: #fcfaad;
+  color: #ffd200;
 }
 
 .ranking-id-wrapper {
-  display:flex;
+  display: flex;
   align-items: center;
-  width:70%;
-  font-size:30px;
+  width: 70%;
+  font-size: 30px;
 }
 
 .ranking-text-area-id {
-  width:70%;
-  display:block;
+  width: 70%;
+  display: block;
   margin-left: 2%;
   font-size: 30px;
   color: #27b9ac;
   -webkit-text-stroke: 1.5px black;
   overflow: hidden;
-  white-space: nowrap; 
+  white-space: nowrap;
 }
 
 #ranking-icon {
