하단 메세지 자동화 / 타이머 관리자 페이지에서 받도록 변경 / gif 처음부터 재생안되는 현상 수정

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -61,6 +61,7 @@
     </div>
     <!--가상광고 영역-->
     <div class="virtual-ad">
+      <img id="virtual-ad-img" src="/public/images/invisible.png" />
     </div>
     <!--하단 영역-->
     <div class="bottom-area-wrapper">
@@ -75,12 +76,12 @@
               /
             </span>
             <span id="quantity-object">
-              500
+              100
             </span>
           </div>
         </div>
         <div class="bottom-timer">
-          <img src="/public/images/clock.png" class="bottom-left-icon" id="clock"/>
+          <img src="/public/images/clock.png" class="bottom-left-icon" id="clock" />
           <span id="time-hour"></span>
           <span id="hour-min-separator"> : </span>
           <span id="time-min"></span>
