우측상단 온애드 로고 삽입

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -57,6 +57,9 @@
       </div>
     </div>
     <!--우측상단 응원메세지-->
+    <div class="top-right-logo">
+      <img src="/public/images/onadLogo.png" id="onad-logo" alt="온애드로고" />
+    </div>
     <div class="top-right">
     </div>
     <!--가상광고 영역-->
