--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -31,7 +31,7 @@ body {
 .live-commerce {
   width: 96.9%;
   height: 94.5%;
-  margin-top:0.7%;
+  margin-top: 0.7%;
   position: relative;
 }
 
@@ -59,14 +59,13 @@ body {
 
 .bottom-left-icon {
   width: 18%;
-  margin-left:10%;
+  margin-left: 10%;
 }
 
 .bottom-left-icon#clock {
   width: 17%;
-  margin-right:8%;
+  margin-right: 8%;
 }
-
 
 .bottom-left-icon.urgent#clock {
   /* Start the shake animation and make the animation last for 0.5 seconds */
@@ -118,6 +117,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  opacity: 0;
 }
 
 .bottom-object span {
@@ -156,7 +156,7 @@ body {
 }
 
 .bottom-timer.urgent {
-  color: #ffd200;;
+  color: #ffd200;
 }
 
 .bottom-timer span {
@@ -189,7 +189,7 @@ body {
 }
 
 .bottom-admin {
-  z-index:3;
+  z-index: 3;
   color: yellow;
   font-size: 23px;
 }
@@ -275,6 +275,11 @@ body {
   width: 22.5%;
   height: 94%;
   position: relative;
+}
+
+.vertical-banner {
+  width: 100%;
+  height: 100%;
 }
 
 /* 좌측 상단 랭킹 */
