--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -53,7 +53,7 @@
       </div>
       <!--세로 배너-->
       <div class="left-banner-area">
-        <img src="/public/images/vertical-banner.gif" class="left-live-commerce" width="100%" height="100%">
+        <img src="/public/images/vertical-banner-1.png" class="vertical-banner" alt="세로배너영역" />
       </div>
     </div>
     <!--우측상단 응원메세지-->
