--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -53,7 +53,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -113,7 +113,7 @@ body {
 
 .bottom-object {
   width: 50%;
-  display: flex;
+  display: none;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -144,7 +144,7 @@ body {
   margin-right: 8%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   font-family: 'DIGITAL';
   font-size: 30px;
@@ -195,10 +195,10 @@ body {
 }
 
 .bottom-area p {
-  padding-left: 100%;
+  padding-left: 3%;
   display: inline-block;
   white-space: nowrap;
-  -webkit-animation-name: marquee;
+  /* -webkit-animation-name: marquee;
   -webkit-animation-timing-function: linear;
   -webkit-animation-duration: 10s;
   -webkit-animation-iteration-count: infinite;
@@ -217,7 +217,7 @@ body {
   animation-name: marquee;
   animation-timing-function: linear;
   animation-duration: 10s;
-  animation-iteration-count: infinite;
+  animation-iteration-count: infinite; */
 }
 
 @-webkit-keyframes marquee {
