--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -279,7 +279,11 @@ body {
 
 .vertical-banner {
   width: 100%;
-  height: 100%;
+  height: 71.5%;
+  left: 0%;
+  bottom: 0%;
+  position: absolute;
+  opacity: 1;
 }
 
 /* 좌측 상단 랭킹 */
@@ -354,12 +358,14 @@ body {
 }
 
 /* 좌측 배너영역 */
-.left-banner-area {
+.left-banner-area :not(img) {
   width: 100%;
   height: 71.5%;
   left: 0%;
   bottom: 0%;
   position: absolute;
+  background-color: white;
+  opacity: 0.7;
 }
 /* 우측상단 온애드 로고 */
 .top-right-logo {
