--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -279,10 +279,7 @@ body {
 
 .vertical-banner {
   width: 100%;
-  height: 71.5%;
-  left: 0%;
-  bottom: 0%;
-  position: absolute;
+  height: 100%;
   opacity: 1;
 }
 
@@ -358,19 +355,17 @@ body {
 }
 
 /* 좌측 배너영역 */
-.left-banner-area :not(img) {
+.left-banner-area {
   width: 100%;
   height: 71.5%;
   left: 0%;
   bottom: 0%;
   position: absolute;
   background-color: white;
-  opacity: 0.7;
+  background: rgba(253, 253, 253, 0.8);
 }
 /* 우측상단 온애드 로고 */
 .top-right-logo {
-  /* width: 34.4%;
-  height: 44.5%; */
   top: 2.5%;
   right: 2%;
   position: fixed;
