requstBanner 코드 분리 완료

--- a/socket/views/client.ejs
+++ b/socket/views/client.ejs
@@ -60,7 +60,7 @@
     const exports = {};
   </script>
 
-  <script src='/public/bundle.js'></script>
+  <script src='/lib/bundle.js'></script>
   <div class="banner-box">
     <div class="default">
       <img id="ad-marker" src="/public/images/notice.png" alt="유료광고배너">
