경고창 레이아웃 변경 / packagejson 수정

--- a/socket/views/wrongUrl.ejs
+++ b/socket/views/wrongUrl.ejs
@@ -5,20 +5,31 @@
     잘못된 주소
   </title>
   <style>
-    body {
-      font-size: 15px;
+    .text-area {
+      height:100%;
+      background-color: #d1d1d1d9;
+      padding-top:3%
+    }
+    p {
+      font-size: 25%;
       font-weight: bold;
     }
   </style>
 </head>
 
 <body>
-  죄송합니다. 등록되지 않은 URL 주소입니다. 주소를 다시 한 번 확인해주세요.
-  <br>
-  만약 올바르게 입력했는데, 이 경고창이 뜬다면 소스등록을 다시 해주세요.
-  <br>
-  더 자세한 사항은 고객센터로 문의하여주시면, 신속히 조치해드리겠습니다.
-  <p>고객센터 E-MAIL : support@onad.io</p>
+  <div class="text-area">
+    <p>
+      등록되지 않은 URL 주소입니다. 주소를 다시 한 번 확인해주세요.
+    </p>
+    <p>
+      만약 올바르게 입력했는데, 이 경고창이 뜬다면 소스 등록을 다시 해주세요.
+    </p>
+    <p>
+      추가 문의는 온애드 카카오 플러스 친구 또는 고객센터로 문의해주세요.
+    </p>
+    <p>고객센터 support@onad.io</p>
+  </div>
 </body>
 
 </html>
