--- a/socket/views/browserWarn.ejs
+++ b/socket/views/browserWarn.ejs
@@ -5,29 +5,25 @@
     웹브라우저를 통한 접근
   </title>
   <style>
-    body {
-      font-size: 15px;
+    .text-area {
+      height:100%;
+      background-color: #d1d1d1d9;
+      padding-top:3%
+    }
+    p {
+      font-size: 25%;
       font-weight: bold;
-    }
-
-    p#changeip {
-      font-size: 20px;
-    }
-
-    span {
-      font-size: 25px;
-      color: red;
     }
   </style>
 </head>
 
 <body>
-  <span>OBS 또는 XSplit 프로그램을 통해 접속해주세요.</span>
-  <br>
-  만약 OBS나 XSplit 프로그램인데, 이 창이 뜬다면 소스 삭제 후 다시 등록해주세요.
-  <br>
-  그래도 해결되지 않는다면 고객센터로 문의해주시길 바랍니다.
-  <p>고객센터 E-MAIL : support@onad.io</p>
+  <div class="text-area">
+    <p>방송 송출 프로그램을 통해 접속해주세요.</p>
+    <p>방송 송출 프로그램에서 이 창이 뜬다면 소스 삭제 후 다시 등록해주세요.</p>
+    <p>추가 문의는 온애드 카카오 플러스 친구 또는 고객센터로 문의해주세요.</p>
+    <p>고객센터 E-MAIL : support@onad.io</p>
+  </div>
 </body>
 
 </html>
