--- a/socket/views/duplicate.ejs
+++ b/socket/views/duplicate.ejs
@@ -5,31 +5,26 @@
     중복접속
   </title>
   <style>
-    body {
-      font-size: 15px;
+    .text-area {
+      height:100%;
+      background-color: #d1d1d1d9;
+      padding-top:3%
+    }
+    p {
+      font-size: 25%;
       font-weight: bold;
-    }
-
-    p#changeip {
-      font-size: 20px;
-    }
-
-    span {
-      font-size: 25px;
-      color: red;
     }
   </style>
 </head>
 
 <body>
-  <span>중복접속입니다.</span>
-  <br>
-  동시에 2개의 배너 오버레이가 하나의 레이아웃에 등록돼 있는지 확인해주세요.
-  <br>
-  레이아웃 하나당 하나의 배너 오버레이만 등록가능합니다.
-  <br>
-  위의 방법으로 해결되지 않는다면 온애드 카카오 플러스 친구 또는 고객센터로 문의해주세요.
-  <p>고객센터 E-MAIL : support@onad.io</p>
+  <div class="text-area">
+      <p>중복접속입니다.</p>
+      <p>레이아웃당 하나의 배너만 등록해주세요.</p>
+      <p>만약 해결되지 않는다면, 새로고침을 하거나, 방송 송출 프로그램을 껐다 켜면 해결될 수 있습니다.</p>
+      <p>추가 문의는 온애드 카카오 플러스 친구 또는 고객센터로 문의해주세요.</p>
+      <p>고객센터 E-MAIL : support@onad.io</p>
+  </div>
 </body>
 
 </html>
