--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -21,34 +21,7 @@
           TOP 구매자
         </p>
         <div class="ranking-area-inner">
-          <p class="ranking-text-area" id="rank-0">
-            <span class="ranking-id-wrapper">
-              <img src="/public/images/crown.png" id="ranking-icon" />
-              <span class="ranking-text-area-id" id="rank-0">
-              </span>
-            </span>
-            <span class="quantity" id="rank-0">
-            </span>
-          </p>
-
-          <p class="ranking-text-area" id="rank-1">
-            <span class="ranking-id-wrapper">
-              <img src="/public/images/second.png" id="ranking-icon" />
-              <span class="ranking-text-area-id" id="rank-1">
-              </span>
-            </span>
-            <span class="quantity" id="rank-1">
-            </span>
-          </p>
-          <p class="ranking-text-area" id="rank-2">
-            <span class="ranking-id-wrapper">
-              <img src="/public/images/third.png" id="ranking-icon" />
-              <span class="ranking-text-area-id" id="rank-2">
-              </span>
-            </span>
-            <span class="quantity" id="rank-2">
-            </span>
-          </p>
+          <img src="/public/images/podium.png" id="podium" style="width:25%;"/>
         </div>
       </div>
       <!--세로 배너-->
